# Pepe

./: bot.py  dark_file.txt  main.py  pyproject.toml  render.yaml  requirements.txt  system-prompt.txt  verizon_config_2025.json
