[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "fraudgpt"
version = "1.0.0"
description = "FraudGPT Telegram Bot"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = "3.9.18"
python-telegram-bot = "20.7"
aiohttp = "3.9.1"
requests = "2.31.0"
Pillow = "10.0.0"

[project]
name = "fraudgpt"
requires-python = ">=3.9,<3.10"
