[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fraudgpt"
version = "1.0.0"
description = "FraudGPT Telegram Bot"
requires-python = ">=3.9,<3.10"

dependencies = [
    "python-telegram-bot==20.7",
    "aiohttp==3.9.1", 
    "requests==2.31.0",
    "Pillow==9.5.0"
]
